--- a/locales/FR/messages.po
+++ b/locales/FR/messages.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO v2.3-beta\n"
-"PO-Revision-Date: 2012-09-21T15:07:48\n"
+"Project-Id-Version: TAO v2.4-beta3\n"
+"PO-Revision-Date: 2013-04-05T18:36:57\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: FR\n"
@@ -10,9 +10,6 @@ msgstr ""
 
 msgid "Class saved"
 msgstr "Classe sauvegardée"
-
-msgid "create table"
-msgstr "créer un tableau"
 
 msgid "delete"
 msgstr "supprimer"
