--- a/locales/PL/messages.po
+++ b/locales/PL/messages.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO v2.3-beta\n"
-"PO-Revision-Date: 2012-09-21T15:55:37\n"
+"Project-Id-Version: TAO v2.4-beta3\n"
+"PO-Revision-Date: 2013-04-05T18:36:57\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: PL\n"
@@ -9,9 +9,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 
 msgid "Class saved"
-msgstr ""
-
-msgid "create table"
 msgstr ""
 
 msgid "delete"
