--- a/locales/fr-FR/messages.po
+++ b/locales/fr-FR/messages.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: TAO v2.4-beta3\n"
-"PO-Revision-Date: 2013-04-05T18:36:57\n"
+"PO-Revision-Date: 2013-09-06 09:37+0000\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: fr-FR\n"
@@ -9,19 +9,19 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 
 msgid "Class saved"
-msgstr "Classe sauvegardée"
+msgstr "Classe enregistrée"
 
 msgid "delete"
-msgstr "supprimer"
+msgstr "Supprimer"
 
 msgid "duplicate"
-msgstr "dupliquer"
+msgstr "Dupliquer"
 
 msgid "Edit group class"
 msgstr "Modifier la classe Groupe"
 
 msgid "export"
-msgstr "exporter"
+msgstr "Exporter"
 
 msgid "Group saved"
 msgstr "Groupe enregistré"
@@ -35,48 +35,57 @@ msgid "Groups"
 msgstr "Groupes"
 
 msgid "Groups library"
-msgstr "Librairie de groupes"
+msgstr "Groupes"
 
 msgid "import"
-msgstr "importer"
+msgstr "Importer"
 
 msgid "lists"
 msgstr "Listes"
 
 #, tao-public
 msgid "Manage groups"
-msgstr "Gérer les groupes"
+msgstr "Gestion des groupes"
 
 msgid "meta data"
-msgstr "métadonnée"
+msgstr "Méta-\ndonnées"
 
 msgid "move"
-msgstr "déplacer"
+msgstr "Déplacer"
 
 msgid "new class"
-msgstr "nouvelle classe"
+msgstr "Créer classe"
 
 msgid "new group"
-msgstr "nouveau groupe"
+msgstr "Créer groupe"
 
 msgid "Related tests"
-msgstr "Tests"
+msgstr "Tests liés"
 
 msgid "Save"
 msgstr "Enregistrer"
 
 msgid "search"
-msgstr "rechercher"
+msgstr "Rechercher"
 
 msgid "Select group deliveries"
-msgstr "Choisissez les deliveries du groupe"
+msgstr "Choisissez les délivrances du groupe"
 
 msgid "Select group test takers"
 msgstr "Choisissez les participants du groupe"
 
 msgid "The Groups module allows to group Test takers according to global features and classifications."
-msgstr "Le module Groupe vous permet de grouper les participants en fonction de propriétés globales et de classifications."
+msgstr "Le module <i>Groupes</i> vous permet de grouper les participants en fonction de propriétés globales et de classifications."
 
 msgid "The main objective of the Group module is to assign the test(s) to the appointed group, thus establishing the basis for running a test."
-msgstr "L'objectif principal du module Groupe est d'attribuer le(s) test(s) au groupe désigné, en établissant ainsi la base de l'exécution du test."
+msgstr "L'objectif principal de ce module est d'attribuer le ou les tests au groupe "
+"désigné, établissant ainsi la base de l'exécution du test."
 
+msgid "Logged in as:"
+msgstr "Connecté en tant que : "
+
+msgid "Settings"
+msgstr "Réglages"
+
+msgid "User Management"
+msgstr "Gestion des utilisateurs"
