Portuguese translation update from latest Pootle update (thanks to ideiafix)
git-svn-id: http://vcs.taotesting.com/svn/oat/projects/taoGroups/trunk@17400 62dfeb86-a93f-4914-9d13-15c0a160985d

--- a/locales/pt-PT/messages.po
+++ b/locales/pt-PT/messages.po
@@ -40,7 +40,7 @@ msgid "Groups library"
 msgstr "Biblioteca de grupos"
 
 msgid "import"
-msgstr "importa"
+msgstr "importar"
 
 msgid "lists"
 msgstr "listas"
