--- a/locales/ar-arb/messages.po
+++ b/locales/ar-arb/messages.po
@@ -1,12 +1,15 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO v2.4-beta3\n"
-"PO-Revision-Date: 2013-04-05T18:36:57\n"
+"Project-Id-Version: TAO v2.6-beta2\n"
+"PO-Revision-Date: 2014-05-30T15:55:02\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: ar-arb\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+
+msgid "Add to group"
+msgstr ""
 
 msgid "Class saved"
 msgstr "صنف محفوظ"
@@ -16,6 +19,9 @@ msgstr "حذف"
 
 msgid "duplicate"
 msgstr "تكرير"
+
+msgid "Edit group"
+msgstr ""
 
 msgid "Edit group class"
 msgstr "تعديل الصنف مجموعة"
@@ -59,24 +65,12 @@ msgstr "صنف جديد"
 msgid "new group"
 msgstr "مجموعة جديدة"
 
-msgid "Related tests"
-msgstr "الاختبارات ذات الصلة"
-
-msgid "Save"
-msgstr "حفظ"
-
 msgid "search"
 msgstr "بحث"
-
-msgid "Select group deliveries"
-msgstr "Choissiez les deliveries du groupe"
 
 msgid "Select group test takers"
 msgstr "اختر مواضيع المجموعة"
 
 msgid "The Groups module allows to group Test takers according to global features and classifications."
 msgstr ""
-
-msgid "The main objective of the Group module is to assign the test(s) to the appointed group, thus establishing the basis for running a test."
-msgstr "L'objectif principal du module Groupe est d'attribuer le(s) test(s) au groupe désigné, en établissant ainsi la base de l'exécution du test."
 
