--- a/locales/da-DK/messages.po
+++ b/locales/da-DK/messages.po
@@ -1,12 +1,15 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO v2.4-beta3\n"
-"PO-Revision-Date: 2013-04-05T18:36:57\n"
+"Project-Id-Version: TAO v2.6-beta2\n"
+"PO-Revision-Date: 2014-05-30T15:55:02\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: da-DK\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+
+msgid "Add to group"
+msgstr ""
 
 msgid "Class saved"
 msgstr "Klasse gemt"
@@ -16,6 +19,9 @@ msgstr "slet"
 
 msgid "duplicate"
 msgstr "kopier"
+
+msgid "Edit group"
+msgstr ""
 
 msgid "Edit group class"
 msgstr "Redigere gruppe klasse"
@@ -59,24 +65,12 @@ msgstr "ny klasse"
 msgid "new group"
 msgstr "ny gruppe"
 
-msgid "Related tests"
-msgstr "Beslægtede test"
-
-msgid "Save"
-msgstr "Gem"
-
 msgid "search"
 msgstr "søg"
-
-msgid "Select group deliveries"
-msgstr "Vælg gruppe leverenser"
 
 msgid "Select group test takers"
 msgstr "Vælg gruppe test tagere"
 
 msgid "The Groups module allows to group Test takers according to global features and classifications."
 msgstr "Gruppe modulet gør det muligt at gruppere test tagere i forhold til globale indstillinger og klassifikationer."
-
-msgid "The main objective of the Group module is to assign the test(s) to the appointed group, thus establishing the basis for running a test."
-msgstr "Hovedsigtet med gruppemodulet er at knytte test(s) til de bestemte grupper, og derigennem oprettet baggrund for at gennemfører en test."
 
