--- a/locales/de-DE/messages.po
+++ b/locales/de-DE/messages.po
@@ -1,12 +1,15 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO v2.4-beta3\n"
-"PO-Revision-Date: 2013-04-05T18:36:57\n"
+"Project-Id-Version: TAO v2.6-beta2\n"
+"PO-Revision-Date: 2014-05-30T15:55:02\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: de-DE\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+
+msgid "Add to group"
+msgstr ""
 
 msgid "Class saved"
 msgstr "Klasse gespeichert"
@@ -16,6 +19,9 @@ msgstr "löschen"
 
 msgid "duplicate"
 msgstr "duplizieren"
+
+msgid "Edit group"
+msgstr ""
 
 msgid "Edit group class"
 msgstr "Klasse"
@@ -59,24 +65,12 @@ msgstr "neue Klasse"
 msgid "new group"
 msgstr "neue Gruppe"
 
-msgid "Related tests"
-msgstr ""
-
-msgid "Save"
-msgstr "Speichern"
-
 msgid "search"
 msgstr "suchen"
-
-msgid "Select group deliveries"
-msgstr ""
 
 msgid "Select group test takers"
 msgstr "Testpersonen der Gruppe markieren"
 
 msgid "The Groups module allows to group Test takers according to global features and classifications."
 msgstr ""
-
-msgid "The main objective of the Group module is to assign the test(s) to the appointed group, thus establishing the basis for running a test."
-msgstr "Das Gruppen-Moduls ermöglicht das Zuweisen von Tests zu Gruppen und stellt damit die Grundlage für das Aufrufen und Laufen eines Tests."
 
