--- a/locales/es-ES/messages.po
+++ b/locales/es-ES/messages.po
@@ -1,12 +1,15 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO v2.4-beta3\n"
-"PO-Revision-Date: 2013-04-05T18:36:57\n"
+"Project-Id-Version: TAO v2.6-beta2\n"
+"PO-Revision-Date: 2014-05-30T15:55:02\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: es-ES\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+
+msgid "Add to group"
+msgstr ""
 
 msgid "Class saved"
 msgstr ""
@@ -15,6 +18,9 @@ msgid "delete"
 msgstr ""
 
 msgid "duplicate"
+msgstr ""
+
+msgid "Edit group"
 msgstr ""
 
 msgid "Edit group class"
@@ -59,24 +65,12 @@ msgstr ""
 msgid "new group"
 msgstr ""
 
-msgid "Related tests"
-msgstr ""
-
-msgid "Save"
-msgstr ""
-
 msgid "search"
-msgstr ""
-
-msgid "Select group deliveries"
 msgstr ""
 
 msgid "Select group test takers"
 msgstr ""
 
 msgid "The Groups module allows to group Test takers according to global features and classifications."
-msgstr ""
-
-msgid "The main objective of the Group module is to assign the test(s) to the appointed group, thus establishing the basis for running a test."
 msgstr ""
 
