--- a/locales/lb-LU/messages.po
+++ b/locales/lb-LU/messages.po
@@ -1,12 +1,15 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO v2.4-beta3\n"
-"PO-Revision-Date: 2013-04-05T18:36:57\n"
+"Project-Id-Version: TAO v2.6-beta2\n"
+"PO-Revision-Date: 2014-05-30T15:55:02\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: lb-LU\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+
+msgid "Add to group"
+msgstr ""
 
 msgid "Class saved"
 msgstr "Klass gespaichert"
@@ -16,6 +19,9 @@ msgstr "läschen"
 
 msgid "duplicate"
 msgstr "duplizéiren"
+
+msgid "Edit group"
+msgstr ""
 
 msgid "Edit group class"
 msgstr "Gruppen Klass editéiren"
@@ -59,24 +65,12 @@ msgstr "Nei Klass"
 msgid "new group"
 msgstr "Nei Grupp"
 
-msgid "Related tests"
-msgstr ""
-
-msgid "Save"
-msgstr "Spaicheren"
-
 msgid "search"
 msgstr "sichen"
-
-msgid "Select group deliveries"
-msgstr ""
 
 msgid "Select group test takers"
 msgstr "Gruppen Testpersounen eraussichen"
 
 msgid "The Groups module allows to group Test takers according to global features and classifications."
 msgstr ""
-
-msgid "The main objective of the Group module is to assign the test(s) to the appointed group, thus establishing the basis for running a test."
-msgstr "d'Haaptziel vum Gruppen Modul besteht dran fier Tester mat hiirem entspriechenden Grupp ze verbannen an esou een Test ze erméiglechen."
 
