--- a/locales/pt-PT/messages.po
+++ b/locales/pt-PT/messages.po
@@ -1,15 +1,15 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO v2.5-alpha\n"
-"PO-Revision-Date: 2013-11-10 16:37-0000\n"
-"Last-Translator: Paulo Amorim <paulo@amorims.com>\n"
+"Project-Id-Version: TAO v2.6-beta2\n"
+"PO-Revision-Date: 2014-05-30T15:55:02\n"
+"Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: pt-PT\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: \n"
-"Language-Team: \n"
-"X-Generator: Poedit 1.5.7\n"
+
+msgid "Add to group"
+msgstr ""
 
 msgid "Class saved"
 msgstr "Disciplina guardada"
@@ -20,6 +20,9 @@ msgstr "eliminar"
 msgid "duplicate"
 msgstr "duplicar"
 
+msgid "Edit group"
+msgstr ""
+
 msgid "Edit group class"
 msgstr "Editar grupo de disciplina"
 
@@ -29,10 +32,11 @@ msgstr "exportar"
 msgid "Group saved"
 msgstr "Grupo guardado"
 
+#, tao-public
 msgid "Group test takers according to global features and classifications."
-msgstr ""
-"Grupo examinados de acordo com características e classificações globais"
+msgstr "Grupo examinados de acordo com características e classificações globais"
 
+#, tao-public
 msgid "Groups"
 msgstr "Grupos"
 
@@ -45,6 +49,7 @@ msgstr "importar"
 msgid "lists"
 msgstr "listas"
 
+#, tao-public
 msgid "Manage groups"
 msgstr "Gestão de grupos"
 
@@ -60,31 +65,12 @@ msgstr "nova disciplina"
 msgid "new group"
 msgstr "novo grupo"
 
-msgid "Related tests"
-msgstr "Testes relacionados"
-
-msgid "Save"
-msgstr "Guardar"
-
 msgid "search"
 msgstr "Procurar"
-
-msgid "Select group deliveries"
-msgstr "Seleccione as entregas do grupo"
 
 msgid "Select group test takers"
 msgstr "Seleccione grupo de examinados"
 
-msgid ""
-"The Groups module allows to group Test takers according to global features "
-"and classifications."
-msgstr ""
-"O módulo de Grupos permite grupo de Examinando de acordo com as "
-"características e classificações globais"
+msgid "The Groups module allows to group Test takers according to global features and classifications."
+msgstr "O módulo de Grupos permite grupo de Examinando de acordo com as características e classificações globais"
 
-msgid ""
-"The main objective of the Group module is to assign the test(s) to the "
-"appointed group, thus establishing the basis for running a test."
-msgstr ""
-"O objectivo principal do módulo de grupo é atribuir o ensaio (s) com o grupo "
-"indicado, estabelecendo, assim, a base para executar um teste."
