--- a/locales/sv-SE/messages.po
+++ b/locales/sv-SE/messages.po
@@ -1,12 +1,15 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO v2.4-beta3\n"
-"PO-Revision-Date: 2013-04-05T18:36:57\n"
+"Project-Id-Version: TAO v2.6-beta2\n"
+"PO-Revision-Date: 2014-05-30T15:55:02\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: sv-SE\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+
+msgid "Add to group"
+msgstr ""
 
 msgid "Class saved"
 msgstr "Klass sparad"
@@ -16,6 +19,9 @@ msgstr "radera"
 
 msgid "duplicate"
 msgstr "dublett"
+
+msgid "Edit group"
+msgstr ""
 
 msgid "Edit group class"
 msgstr "Redigera gruppklass"
@@ -59,24 +65,12 @@ msgstr "ny klass"
 msgid "new group"
 msgstr "ny grupp"
 
-msgid "Related tests"
-msgstr "Besläktade test"
-
-msgid "Save"
-msgstr "Spara"
-
 msgid "search"
 msgstr "sök"
-
-msgid "Select group deliveries"
-msgstr "Välj gruppleveranser"
 
 msgid "Select group test takers"
 msgstr "Välj grupptesttagare"
 
 msgid "The Groups module allows to group Test takers according to global features and classifications."
 msgstr ""
-
-msgid "The main objective of the Group module is to assign the test(s) to the appointed group, thus establishing the basis for running a test."
-msgstr "Huvudsyftet med gruppmodulen är att knyta test(er) till fastställd grupp, och därigenom upprätta grunden för att genomföra ett test"
 
