--- a/locales/zh-SG/messages.po
+++ b/locales/zh-SG/messages.po
@@ -1,14 +1,14 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO v2.6-alpha\n"
-"PO-Revision-Date: 2013-10-11T21:41:50\n"
+"Project-Id-Version: TAO v2.6-beta2\n"
+"PO-Revision-Date: 2014-05-30T15:55:02\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: zh-SG\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-msgid "Add to group "
+msgid "Add to group"
 msgstr ""
 
 msgid "Class saved"
@@ -18,6 +18,9 @@ msgid "delete"
 msgstr ""
 
 msgid "duplicate"
+msgstr ""
+
+msgid "Edit group"
 msgstr ""
 
 msgid "Edit group class"
@@ -69,8 +72,5 @@ msgid "Select group test takers"
 msgstr ""
 
 msgid "The Groups module allows to group Test takers according to global features and classifications."
-msgstr ""
-
-msgid "The main objective of the Group module is to assign the test(s) to the appointed group, thus establishing the basis for running a test."
 msgstr ""
 
