--- a/locales/de-DE/messages.po
+++ b/locales/de-DE/messages.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO 3.1.0-sprint15\n"
-"PO-Revision-Date: 2015-12-23T13:12:16\n"
+"Project-Id-Version: TAO 3.1.0-sprint23\n"
+"PO-Revision-Date: 2016-08-18T11:59:56\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: de-DE\n"
@@ -14,7 +14,7 @@ msgstr ""
 "X-Poedit-SearchPath-0: .\n"
 
 msgid "Add to group"
-msgstr ""
+msgstr "Zur Gruppe hinzufügen"
 
 #, tao-public
 msgid "Delete"
@@ -25,7 +25,7 @@ msgid "Duplicate"
 msgstr "Duplizieren"
 
 msgid "Edit group"
-msgstr ""
+msgstr "Gruppe bearbeiten"
 
 #, tao-public
 msgid "Export"
@@ -33,14 +33,14 @@ msgstr "Export"
 
 #, tao-public
 msgid "Filter"
-msgstr "import"
+msgstr "Filter"
 
 msgid "Group saved"
 msgstr "Gruppe gespeichert"
 
 #, tao-public
 msgid "Group test takers according to global features and classifications."
-msgstr ""
+msgstr "Gruppieren von Testteilnehmern nach globalen Eigenschaften und Klassifizierungen."
 
 #, tao-public
 msgid "Groups"
@@ -52,7 +52,7 @@ msgstr "Gruppen-Bibliothek"
 
 #, tao-public
 msgid "Import"
-msgstr ""
+msgstr "Importieren"
 
 #, tao-public
 msgid "Manage groups"
@@ -60,7 +60,7 @@ msgstr "Gruppen verwalten"
 
 #, tao-public
 msgid "Move"
-msgstr ""
+msgstr "Verschieben"
 
 #, tao-public
 msgid "New class"
@@ -72,7 +72,7 @@ msgstr "neue Gruppe"
 
 #, tao-public
 msgid "Properties"
-msgstr ""
+msgstr "Eigenschaften"
 
 #, tao-public
 msgid "Search"
@@ -82,5 +82,5 @@ msgid "Select group test takers"
 msgstr "Testpersonen der Gruppe markieren"
 
 msgid "The Groups module allows to group Test takers according to global features and classifications."
-msgstr ""
+msgstr "Das Gruppenmodul erlaubt die Gruppierung von Testpersonen anhand globaler Eigenschaften und Klassifizierungen."
 
