--- a/locales/fr-FR/messages.po
+++ b/locales/fr-FR/messages.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO 3.3.0-sprint92.1\n"
-"PO-Revision-Date: 2019-01-18T12:46:10\n"
+"Project-Id-Version: TAO 3.3.0-sprint96\n"
+"PO-Revision-Date: 2019-04-25T01:08:49\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: fr-FR\n"
@@ -14,7 +14,7 @@ msgstr ""
 "X-Poedit-SearchPath-0: .\n"
 
 msgid "Add to group"
-msgstr ""
+msgstr "Ajouter au groupe"
 
 #, tao-public
 msgid "Copy To"
@@ -22,47 +22,47 @@ msgstr ""
 
 #, tao-public
 msgid "Delete"
-msgstr ""
+msgstr "Supprimer"
 
 #, tao-public
 msgid "Duplicate"
-msgstr ""
+msgstr "Dupliquer"
 
 msgid "Edit group"
-msgstr ""
+msgstr "Édition du groupe"
 
 #, tao-public
 msgid "Export"
-msgstr ""
+msgstr "Exporter"
 
 msgid "Group saved"
-msgstr ""
+msgstr "Groupe enregistré"
 
 #, tao-public
 msgid "Group test takers according to global features and classifications."
-msgstr ""
+msgstr "Grouper les participants selon des fonctionnalités globales et des classifications."
 
 msgid "Group uri is not valid"
 msgstr ""
 
 #, tao-public
 msgid "Groups"
-msgstr ""
+msgstr "Groupes"
 
 #, tao-public
 msgid "Groups library"
-msgstr ""
+msgstr "Bibliothèque des groupes"
 
 #, tao-public
 msgid "Import"
-msgstr ""
+msgstr "Importer"
 
 msgid "Last updated on %2s"
 msgstr ""
 
 #, tao-public
 msgid "Manage groups"
-msgstr ""
+msgstr "Gérer les groupes"
 
 #, tao-public
 msgid "Manage Schema"
@@ -70,7 +70,7 @@ msgstr ""
 
 #, tao-public
 msgid "Move"
-msgstr ""
+msgstr "Déplacer"
 
 #, tao-public
 msgid "Move To"
@@ -78,21 +78,21 @@ msgstr ""
 
 #, tao-public
 msgid "New class"
-msgstr ""
+msgstr "Nouvelle classe"
 
 #, tao-public
 msgid "New Group"
-msgstr ""
+msgstr "Nouveau groupe"
 
 #, tao-public
 msgid "Properties"
-msgstr ""
+msgstr "Propriétés"
 
 msgid "Select group test takers"
-msgstr ""
+msgstr "Groupe de participants"
 
 msgid "The Groups module allows to group Test takers according to global features and classifications."
-msgstr ""
+msgstr "Le module Groupes permet de rassembler les participants selon des fonctionnalités générales et des classifications."
 
 msgid "Unable to create new group"
 msgstr ""
