--- a/locales/it-IT/messages.po
+++ b/locales/it-IT/messages.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO 3.3.0-sprint92.1\n"
-"PO-Revision-Date: 2019-01-18T12:46:10\n"
+"Project-Id-Version: TAO 3.3.0-sprint96\n"
+"PO-Revision-Date: 2019-04-25T01:04:22\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: it-IT\n"
@@ -40,7 +40,7 @@ msgstr "Gruppo salvato"
 
 #, tao-public
 msgid "Group test takers according to global features and classifications."
-msgstr "Raggruppa i partecipanti secondo caratteristiche globali e classificazioni."
+msgstr "Raggruppa i partecipanti secondo caratteristiche e classificazioni globali."
 
 msgid "Group uri is not valid"
 msgstr ""
@@ -92,7 +92,7 @@ msgid "Select group test takers"
 msgstr "Seleziona gruppo di partecipanti"
 
 msgid "The Groups module allows to group Test takers according to global features and classifications."
-msgstr "Il modulo Gruppi consente di raggruppare i partecipanti secondo caratteristiche globali e classificazioni."
+msgstr "Il modulo Gruppi consente di raggruppare i partecipanti secondo caratteristiche e classificazioni globali."
 
 msgid "Unable to create new group"
 msgstr ""
