--- a/locales/ru-RU/taogroup.rdf.po
+++ b/locales/ru-RU/taogroup.rdf.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO 3.3.0-sprint92.1\n"
-"PO-Revision-Date: 2019-01-18T12:46:10\n"
+"Project-Id-Version: TAO 3.3.0-sprint96\n"
+"PO-Revision-Date: 2019-04-25T01:12:42\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: ru-RU\n"
@@ -13,50 +13,50 @@ msgstr ""
 # http://www.tao.lu/Ontologies/TAOGroup.rdf#Group
 msgctxt "http://www.w3.org/2000/01/rdf-schema#label"
 msgid "Group"
-msgstr ""
+msgstr "Группа"
 
 # http://www.tao.lu/Ontologies/TAOGroup.rdf#Group
 msgctxt "http://www.w3.org/2000/01/rdf-schema#comment"
 msgid "Group"
-msgstr ""
+msgstr "Группа"
 
 # http://www.tao.lu/Ontologies/TAOGroup.rdf#member
 msgctxt "http://www.w3.org/2000/01/rdf-schema#comment"
 msgid "Member of the groups"
-msgstr ""
+msgstr "Член групп"
 
 # http://www.tao.lu/Ontologies/TAOGroup.rdf#GroupsManagerRole
 msgctxt "http://www.w3.org/2000/01/rdf-schema#label"
 msgid "Groups Manager"
-msgstr ""
+msgstr "Менеджер групп"
 
 # http://www.tao.lu/Ontologies/TAOGroup.rdf#GroupsManagerRole
 msgctxt "http://www.w3.org/2000/01/rdf-schema#comment"
 msgid "The Groups Manager Role"
-msgstr ""
+msgstr "Роль менеджера групп"
 
 # http://www.tao.lu/Ontologies/TAOGroup.rdf#member
 msgctxt "http://www.w3.org/2000/01/rdf-schema#label"
 msgid "Member"
-msgstr ""
+msgstr "Участник"
 
 # http://www.tao.lu/Ontologies/TAOGroup.rdf#Members
 msgctxt "http://www.w3.org/2000/01/rdf-schema#label"
 msgid "Members"
-msgstr ""
+msgstr "Участники"
 
 # http://www.tao.lu/Ontologies/TAOGroup.rdf#Members
 msgctxt "http://www.w3.org/2000/01/rdf-schema#comment"
 msgid "Members of the group"
-msgstr ""
+msgstr "Участники группы"
 
 # http://www.tao.lu/Ontologies/TAOGroup.rdf#Members
 msgctxt "http://www.w3.org/2000/01/rdf-schema#comment"
 msgid "Members"
-msgstr ""
+msgstr "Участники"
 
 # http://www.tao.lu/Ontologies/TAOGroup.rdf#GroupsManagerRole
 msgctxt "http://www.w3.org/2000/01/rdf-schema#comment"
 msgid "Groups Manager"
-msgstr ""
+msgstr "Менеджер групп"
 
