--- a/locales/ja-JP/messages.po
+++ b/locales/ja-JP/messages.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO 3.4.0-sprint120\n"
-"PO-Revision-Date: 2020-01-31T09:41:41\n"
+"Project-Id-Version: TAO 2022.09\n"
+"PO-Revision-Date: 2022-08-12T16:45:50\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: ja-JP\n"
@@ -31,7 +31,6 @@ msgstr "コピー"
 msgid "Edit group"
 msgstr "グループの編集"
 
-
 #, tao-public
 msgid "Export"
 msgstr "エクスポート"
@@ -41,7 +40,7 @@ msgstr "グループ保存"
 
 #, tao-public
 msgid "Group test takers according to global features and classifications."
-msgstr "グローバルな特徴や分類に応じて、受検者をグループ化する。"
+msgstr "グローバルな特徴や分類に応じて、受験者をグループ化する。"
 
 msgid "Group uri is not valid"
 msgstr "グループURIは無効です"
@@ -90,10 +89,10 @@ msgid "Properties"
 msgstr "プロパティ"
 
 msgid "Select group test takers"
-msgstr "グループ対象受検者"
+msgstr "グループ対象受験者"
 
 msgid "The Groups module allows to group Test takers according to global features and classifications."
-msgstr "グループは、グローバルな特徴や分類に従って受検者をグループ化することができます。"
+msgstr "グループは、グローバルな特徴や分類に従って受験者をグループ化することができます。"
 
 msgid "Unable to create new group"
 msgstr "新規グループを作成できません"
